--- a/echipa.html
+++ b/echipa.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="description" content="Pagina creata cu scopul de a-i ajuta pe elevi sa invete mai usor informatica , respectiv multimile pe Vectori">
+  <meta name="author" content="Alexandru Scanteie">
+  <meta name="keywords" content="informatica,multimi,vectori,tablouri-unidimensionale,reuniune,intersectie,diferenta,c++,programare">
 
-  <!-- Page Title -->
   <title>Multimi pe vectori</title>
   <!-- / -->
 
@@ -61,7 +64,6 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarshark">
           <ul class="navbar-nav ml-auto">
             <li><a class="nav-link " href="index.html">Home</a></li>
-            <!-- <li><a class="nav-link" href="features.html">Features</a></li> -->
             <li><a class="nav-link " href="probleme.html">Probleme</a></li>
             <li><a class="nav-link active" href="echipa.html">Echipa</a></li>
             <li><a class="nav-link " href="https://cdn.discordapp.com/attachments/853658290239307826/853658740128481280/MultimiPeVectori.rar" ><i class="fa fa-download" aria-hidden="true"></i>  Download </a></li>
@@ -103,11 +105,11 @@
               <span class="theme-g-bg"></span>
               <h2>Componența echipei</h2>
               <p>
-                <br>1.Scanteie Alexandru     <a href="https://www.pbinfo.ro/profil/alexscanteie">     <i class="fab fa-linkedin-in"></i></a>
-                <br>2.Balasa Rareș          <a href="https://www.pbinfo.ro/profil/lemon777">     <i class="fab fa-linkedin-in"></i></a>
-                <br>3.Voicu Aida      <a href="https://www.pbinfo.ro/profil/voicu_aida019">     <i class="fab fa-linkedin-in"></i></a>
-                <br>4.Georgescu Tiberiu     <a href="https://www.pbinfo.ro/profil/tiberiu_georgescu">     <i class="fab fa-linkedin-in"></i></a>
-                <br>5.Bunea George        <a href="https://www.pbinfo.ro/profil/BuneaGeorge">     <i class="fab fa-linkedin-in"></i></a>
+                <br>1.Scanteie Alexandru     <a href="https://www.pbinfo.ro/profil/alexscanteie" target="_blank">     <i class="fab fa-linkedin-in"></i></a>
+                <br>2.Balasa Rareș          <a href="https://www.pbinfo.ro/profil/lemon777" target="_blank">     <i class="fab fa-linkedin-in"></i></a>
+                <br>3.Voicu Aida      <a href="https://www.pbinfo.ro/profil/voicu_aida019" target="_blank">     <i class="fab fa-linkedin-in"></i></a>
+                <br>4.Georgescu Tiberiu     <a href="https://www.pbinfo.ro/profil/tiberiu_georgescu" target="_blank">     <i class="fab fa-linkedin-in"></i></a>
+                <br>5.Bunea George        <a href="https://www.pbinfo.ro/profil/BuneaGeorge" target="_blank">     <i class="fab fa-linkedin-in"></i></a>
               </p>
             </div>
           </div> <!-- col -->
@@ -177,15 +179,9 @@
     <div class="row">
       <div class="col-md-4 col-lg-5 sm-m-15px-tb">
         <h4>Despre noi</h4>
-        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation</p>
+        <p class="footer-text">Noi suntem echipa Lil Coders şi am creat acest site atât cu scopul de a prezenta colegilor noştri  mulţimile pe vectori, cât şi cu cel de a obţine un 10 la această materie minunată. Pasiunea tuturor este informatică aşa că toţi ne-am adunat şi prin cunoştinţele fiecăruia în acest domeniu am pus cap la cap un site plin de materiale folositoare cu care oricine poate înţelege această temă frumoasă.Aşadar, dragi colegi, vă invităm să asistaţi la prezentarea site-ului muncit de noi. Sper să vă placă!</p>
         <ul class="social-icons">
-          <!--<li><a class="facebook" href="#"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a class="twitter" href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="google" href="#"><i class="fab fa-google-plus-g"></i></a></li>
-          <li><a class="linkedin" href="#"><i class="fab fa-linkedin-in"></i></a></li>-->
-          <li><a class="github" href="https://github.com/Inf3n0s"><i class="fab fa-github"></i></a></li>
+          <li><a class="github" href="https://github.com/Inf3n0s" target="_blank"><i class="fab fa-github"></i></a></li>
         </ul>
       </div> 
 
@@ -215,7 +211,7 @@
     </div>
     <div class="row">
       <div class="col-12 footer-copy">
-        <p class="m-0px"> Copyright © 2021 | Site proiectat și menținut de Scanteie Alexandru          </p>
+        <p class="m-0px"> Copyright © 2021 | Site proiectat și menținut de <a href="https://alexscanteie.com " target="_blank ">Scanteie Alexandru   </a>        </p>
       </div>
     </div> 
   </div>    
@@ -234,7 +230,4 @@
 
 </body>
 <!-- Body End -->
-
-
-<!-- Mirrored from www.pxdraft.com/themeforest/moxo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Jun 2021 15:12:33 GMT -->
 </html>
