--- a/probleme.html
+++ b/probleme.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="description" content="Pagina creata cu scopul de a-i ajuta pe elevi sa invete mai usor informatica , respectiv multimile pe Vectori">
+  <meta name="author" content="Alexandru Scanteie">
+  <meta name="keywords" content="informatica,multimi,vectori,tablouri-unidimensionale,reuniune,intersectie,diferenta,c++,programare">
 
   <!-- Page Title -->
   <title>Multimi pe vectori</title>
@@ -49,7 +53,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Multimi pe vectori <span class="theme-bg"></span></a>
+        <a class="navbar-brand" href="index.html">Multimi pe vectori <span class="theme-bg"></span></a>
         
 
         <!-- Mobile Toggle -->
@@ -105,7 +109,6 @@
             <div class="section-title">
               <span class="theme-g-bg"></span>
               <h2>Probleme PBINFO</h2>
-              <!-- <p>Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</p>-->
             </div>
           </div> <!-- col -->
         </div> <!-- row -->
@@ -296,59 +299,6 @@ ofstream <span style="color: #0000dd;">cout</span><span style="color: #008000;">
     </section>
     <!--  -->
 
-    <!-- <section class="faq-section p-60px-tb md-p-50px-tb sm-p-40px-tb">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center m-40px-b sm-m-30px-b">
-            <div class="section-title">
-              <span class="theme-g-bg"></span>
-              <h2>Frequently asked questions.</h2>
-              <p>Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</p>
-            </div>
-          </div> 
-        </div> 
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="accordion accordion-08">
-                <div class="moxo-group">
-                    <a href="#" class="moxo-heading">Is this a secure for any device?</a>
-                    <div class="moxo-des">Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</div>
-                </div>
-                <div class="moxo-group">
-                    <a href="#" class="moxo-heading">Is this a secure for any device?</a>
-                    <div class="moxo-des">Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</div>
-                </div>
-                <div class="moxo-group">
-                    <a href="#" class="moxo-heading">Is this a secure for any device?</a>
-                    <div class="moxo-des">Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</div>
-                </div>
-            </div>
-          </div> 
-
-          <div class="col-md-6">
-            <div class="accordion accordion-08">
-                <div class="moxo-group">
-                    <a href="#" class="moxo-heading">Is this a secure for any device?</a>
-                    <div class="moxo-des">Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</div>
-                </div>
-                <div class="moxo-group">
-                    <a href="#" class="moxo-heading">Is this a secure for any device?</a>
-                    <div class="moxo-des">Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</div>
-                </div>
-                <div class="moxo-group">
-                    <a href="#" class="moxo-heading">Is this a secure for any device?</a>
-                    <div class="moxo-des">Moxo – Startups Website Template is Software, Web Application & Startups Landing Page Template. This Template specially designs for who want to start their Software Business.</div>
-                </div>
-            </div>
-          </div> 
-
-
-
-        </div> 
-      </div>
-    </section>
-     -->
 
   </main>
   <!-- Main End -->
@@ -359,15 +309,9 @@ ofstream <span style="color: #0000dd;">cout</span><span style="color: #008000;">
     <div class="row">
       <div class="col-md-4 col-lg-5 sm-m-15px-tb">
         <h4>Despre noi</h4>
-        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation</p>
+        <p class="footer-text">Noi suntem echipa Lil Coders şi am creat acest site atât cu scopul de a prezenta colegilor noştri  mulţimile pe vectori, cât şi cu cel de a obţine un 10 la această materie minunată. Pasiunea tuturor este informatică aşa că toţi ne-am adunat şi prin cunoştinţele fiecăruia în acest domeniu am pus cap la cap un site plin de materiale folositoare cu care oricine poate înţelege această temă frumoasă.Aşadar, dragi colegi, vă invităm să asistaţi la prezentarea site-ului muncit de noi. Sper să vă placă!</p>
         <ul class="social-icons">
-          <!--<li><a class="facebook" href="#"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a class="twitter" href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="google" href="#"><i class="fab fa-google-plus-g"></i></a></li>
-          <li><a class="linkedin" href="#"><i class="fab fa-linkedin-in"></i></a></li>-->
-          <li><a class="github" href="https://github.com/Inf3n0s"><i class="fab fa-github"></i></a></li>
+          <li><a class="github" href="https://github.com/Inf3n0s" target="_blank"><i class="fab fa-github"></i></a></li>
         </ul>
       </div> 
 
@@ -397,7 +341,7 @@ ofstream <span style="color: #0000dd;">cout</span><span style="color: #008000;">
     </div>
     <div class="row">
       <div class="col-12 footer-copy">
-        <p class="m-0px"> Copyright © 2021 | Site proiectat și menținut de Scanteie Alexandru          </p>
+        <p class="m-0px"> Copyright © 2021 | Site proiectat și menținut de <a href="https://alexscanteie.com " target="_blank ">Scanteie Alexandru   </a>        </p>
       </div>
     </div> 
   </div>    
