--- a/echipa.html
+++ b/echipa.html
@@ -49,7 +49,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Multimi pe vectori <span class="theme-bg"></span></a>
+        <a class="navbar-brand" href="index.html">Multimi pe vectori <span class="theme-bg"></span></a>
         
 
         <!-- Mobile Toggle -->
