--- a/echipa.html
+++ b/echipa.html
@@ -119,7 +119,7 @@
           <div class="col-lg-4">
             <div class="contact-form sm-m-30px-b">
               <h4>Spune-ne părerea ta</h4>
-              <form action="./static/contact_form.php" method="POST">
+              <form action="contact_form.php" method="POST">
                 <div class="m-15px-b">
                   <input type="text"  name="name" class="form-control" placeholder="Nume" value="" required="">
                 </div>
@@ -133,7 +133,6 @@
                   <textarea class="form-control" name="message" placeholder="Mesajul tău" rows="3" maxlength="5000"></textarea>
                 </div>
                 <span id="rchars">5000</span> Character(s) Remaining 
-              
                 <button type="submit" name="submit" id="submit" value="SUBMIT" class="m-btn btn-theme">Trimite</button>
               </form>
             </div> <!-- contact fomr -->
