--- a/echipa.html
+++ b/echipa.html
@@ -119,7 +119,7 @@
           <div class="col-lg-4">
             <div class="contact-form sm-m-30px-b">
               <h4>Spune-ne părerea ta</h4>
-              <form action="contact_form.php" method="POST">
+              <form action="https://formspree.io/f/mwkaakgr" method="POST">
                 <div class="m-15px-b">
                   <input type="text"  name="name" class="form-control" placeholder="Nume" value="" required="">
                 </div>
